# startwine

./: CHANGELOG  README-RU.md  README.md  meson.build
data/: ru.launcher.StartWine.desktop.in  startwine.in
data/app_config/.default/: AIMP  Anno1800  Anomaly_Zone  Battle.net_Launcher  Caliber  CrossOut  EALauncher  EpicGamesLauncher  ExboLauncher  GalaxyClient  GameXP_Launcher  HoYoPlay  Launcher  Lineage  Lost_Light  PathOfExile  PlariumPlay  PopcoTime  RPG_Club  RiotClientServices  Setup  StalkerOnline_Launcher  UbisoftConnect  VKPlay  WorldOfSeaBattleClient  Zona  default  eve-online  lgc  osu!  retrobat  steam  wgc  yuzu
data/app_patches/: Disable_Hidraw_patch.reg  Enable_Hidraw_patch.reg  EveLauncher_patch.reg  Force_GPU_AMD_patch.reg  Force_GPU_NVIDIA_patch.reg  Force_GPU_OFF_patch.reg  Forza_Horizon5_patch.reg  NFS_Most_Wanted_patch.reg  Road_Rash_patch.reg  The_Witcher_patch.reg  Use_old_gst_patch.reg  Use_vulkan_renderer_patch.reg  kill_autorun.reg  make_def_iso_patch.reg  steam_x64_patch.reg  steam_x86_patch.reg
data/img/sw_themes/css/: default.css
data/scripts/: dxvk_vkd3d_version.json  sw_data.py  sw_func.py  sw_make_def_iso  sw_menu.py  sw_runlib  sw_uninstaller  wine_version.json
